--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   state_notifier: ^0.7.1
   flutter_state_notifier: ^0.7.1
   freezed_annotation: ^1.1.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
