--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  provider: ^6.0.1
-  state_notifier: ^0.7.1
-  flutter_state_notifier: ^0.7.1
+  provider: ^6.0.5
+  state_notifier: ^0.7.2+1
+  flutter_state_notifier: ^0.7.3
   freezed_annotation: ^1.1.0
   shared_preferences: ^2.0.6
 
