--- a/build.yaml
+++ b/build.yaml
@@ -8,3 +8,6 @@ targets:
             - lib/presentation/pages/**/*.dart
             - lib/usecase/*.dart
             - lib/usecase/**/*.dart
+      mockito|mockBuilder:
+        generate_for:
+          - test/**.dart
