--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: subosito/flutter-action@v1.5.0
         with:
           flutter-version: '2.10.3'
+          channel: dev
       - name: Install packages
         run: flutter pub get
       - name: Linter
